--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-        <form>
+        <form onsubmit="handleFormSubmit(event)">
             <fieldset>
                 <legend><h1 style="color: green;">Application Form</h1></legend>
 
@@ -17,7 +17,7 @@
 
                 <!-- Phone -->
                 <label for="phone"><b>Phone Number:</b></label>
-                <input type="tel" id="phone" name="phone" placeholder="### ### ####" required><br><br>
+                <input type="tel" id="phone" name="phone" placeholder="### ### ####" pattern="[0-9]{10}" maxlength="10" required><br><br>
 
                 <!-- Email -->
                 <label for="email"><b>Email:</b></label>
@@ -55,21 +55,23 @@
                 <!-- Experience -->
                 <label for="experience"><b>Experience:</b></label><br><br>
                 <textarea id="experience" name="experience" style="width:400px" rows="5"
-                    placeholder="Tell me your experience below 2000 characters including internships..."></textarea><br><br>
-<label><b>Upload Resume:</b></label>
-<div class="file-upload">
-    <label for="resume" class="custom-file-btn">Choose Resume</label>
-    <span id="resume-name">No file chosen</span>
-    <input type="file" id="resume" name="resume" required>
-</div><br>
+                    placeholder="Tell me your experience below 2000 characters including internships..." required></textarea><br><br>
 
-<label><b>Upload Photo:</b></label>
-<div class="file-upload">
-    <label for="photo" class="custom-file-btn">Choose Photo</label>
-    <span id="photo-name">No file chosen</span>
-    <input type="file" id="photo" name="photo">
-</div><br>
+                <!-- Resume Upload -->
+                <label><b>Upload Resume:</b></label>
+                <div class="file-upload">
+                    <label for="resume" class="custom-file-btn">Choose Resume</label>
+                    <span id="resume-name">Resume size must be Up to 5 MB</span>
+                    <input type="file" id="resume" name="resume" accept=".doc,.docx,.pdf" required>
+                </div><br>
 
+                <!-- Photo Upload -->
+                <label><b>Upload Photo:</b></label>
+                <div class="file-upload">
+                    <label for="photo" class="custom-file-btn">Choose Photo</label>
+                    <span id="photo-name">Photo size must be less than 1MB!</span>
+                    <input type="file" id="photo" name="photo" accept="image/*" required>
+                </div><br>
 
                 <!-- Submit -->
                 <button type="submit">Submit</button>
@@ -77,7 +79,6 @@
         </form>
     </center>
 
-    <!-- External JS -->
     <script src="javascript.js"></script>
 </body>
 </html>
